list objects and modbus

--- a/configure.ac
+++ b/configure.ac
@@ -18,7 +18,7 @@ AC_SEARCH_LIBS([pthread_create], [pthread], [],
 
 AC_CONFIG_FILES([
     Makefile
-  scripts/makefile
+  scripts/Makefile
   src/Makefile
     
 ])
